cluster/apps/default/external-services/nextcloud/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name nextcloud-external
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: default
        - name: nextcloud-redirect-1
          namespace: default
        - name: nextcloud-redirect-2
          namespace: default
      services:
        - name: *name
          port: 8888
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
